fix: better contrast for text 'disruptions' on line and stop page

--- a/app/component/route.scss
+++ b/app/component/route.scss
@@ -969,7 +969,7 @@ $margin-left-right: 21.3px;
       }
     }
     .no-alerts > span {
-      color: #b7b7b7;
+      color: #888;
     }
   }
 
